grammars/ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    expression_item: $ => seq(
      $._sequence_expression,
      repeat($.item_attribute)
    ),

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.let_and_operator), $.let_binding)
    ),

    let_binding: $ => prec.right(seq(
      choice(
        // A pattern. Examples:
        //    let x
        //    let (x @ local)
        //    let (x, y)
        // We cannot allow exception patterns here because that would create a
        // conflict: when encountering [let exception], the parser wouldn't be
        // able to determine whether the code is a [$.let_exception_expression]
        // or an [$.exception_pattern] inside a [$.let_binding].
        field('pattern', $._pattern_no_exception),
        // Legacy modes followed by an identifier or a parenthesized operator.
        // Examples:
        //    let local_ x
        //    let local_ ( + )
        seq(
          $._mode_expr_legacy,
          field('pattern', $._value_name)
        ),
      ),
      optional(choice(
        $.at_mode_expr,
        seq(
          repeat($._parameter),
          optional(choice(
            $._maybe_polymorphic_typed_with_optional_modes,
            $.at_mode_expr
          )),
          optional($._coerced),
          '=',
          field('body', $._sequence_expression)
        )
      )),
      repeat($.item_attribute)
    )),

    _parameter: $ => choice(
      $.parameter,
      alias(
        $._parenthesized_abstract_types_with_optional_jkind_annotations,
        $.abstract_types
      )
    ),

    parameter: $ => choice(
      // A positional parameter. Examples:
      //    x
      //    (x : t)
      //    (x : 'a. 'a)
      field('pattern', $._simple_maybe_polymorphic_pattern_with_optional_modes),
      // A labeled or optional parameter with no additional information.
      // Examples:
      //    ~x
      //    ?x
      seq(
        choice('~', '?'),
        field('pattern', $._simple_value_pattern)
      ),
      // A labeled or optional parameter inside parentheses, optionally with a
      // default value. Examples:
      //    ~(x : t)
      //    ?(x : 'a. 'a)
      //    ?(x : t = y)
      // TODO: Currently, this rule allows default values on labeled
      // parameters, e.g. [~(x = y)], but Flambda doesn't allow this syntax. We
      // should fix this inconsistency.
      seq(
        choice('~', '?'),
        '(',
        optional($._mode_expr_legacy),
        field('pattern', $._simple_value_pattern),
        optional(choice(
          $._maybe_polymorphic_typed_with_optional_modes,
          $.at_mode_expr
        )),
        optional(seq('=', $._sequence_expression)),
        ')'
      ),
      // A labeled or optional parameter with an alias. Examples:
      //    ~x:y
      //    ~x:(y : t)
      //    ?x:(y : 'a. 'a)
      seq(
        $._label,
        token.immediate(':'),
        field(
          'pattern',
          $._simple_maybe_polymorphic_pattern_with_optional_modes
        )
      ),
      // A labeled or optional parameter with an alias and a default value.
      // Examples:
      //    ?x:(y = z)
      //    ?x:(y : t = z)
      //    ?x:(y : 'a. 'a = z)
      // TODO: Currently, this rule allows default values on labeled
      // parameters, e.g. [~x:(y = z)] but Flambda doesn't allow this syntax. We
      // should fix this inconsistency.
      seq(
        $._label,
        token.immediate(':'),
        '(',
        optional($._mode_expr_legacy),
        field('pattern', $._pattern),
        optional(choice(
          $._maybe_polymorphic_typed_with_optional_modes,
          $.at_mode_expr
        )),
        seq('=', $._sequence_expression),
        ')'
      )
    ),

    type_definition: $ => seq(
      'type',
      optional($._attribute),
      optional('nonrec'),
      sep1('and', $.type_binding)
    ),

    type_binding: $ => seq(
      optional($._type_params),
      choice(
        seq(
          field('name', $._type_constructor),
          optional($._jkind_annotation),
          optional(seq(
            '=',
            $._type_binding_body
          )),
          repeat($.type_constraint)
        ),
        seq(
          field('name', $.type_constructor_path),
          seq(
            '+=',
            optional('private'),
            field('body', $.variant_declaration)
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_binding_body: $ => choice(
      seq(optional('private'), $._type),
      seq(
        optional($.type_synonym),
        optional('private'),
        field('body', choice(
          $.variant_declaration,
          $.record_declaration,
          '..'
        ))
      )
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', seq(
        $._type_param,
        optional($._jkind_annotation)
      )))
    ),

    variant_declaration: $ => choice(
      seq('|', sep('|', $.constructor_declaration)),
      sep1('|', $.constructor_declaration)
    ),

    constructor_declaration: $ => seq(
      choice(
        $._constructor_name,
        alias(choice(seq('[', ']'), seq('(', ')'), 'true', 'false'), $.constructor_name)
      ),
      optional(choice(
        seq('of', $._constructor_argument),
        seq(
          ':',
          optional(seq(
            repeat1($._type_variable_with_optional_jkind_annotation),
            '.'
          )),
          optional(seq($._constructor_argument, '->')),
          $._simple_type
        ),
        seq('=', $.constructor_path)
      ))
    ),

    _constructor_argument: $ => choice(
      sep1('*', seq(
        optional($.modality_legacy),
        $._simple_type,
        optional($.atat_modality_expr)
      )),
      $.record_declaration
    ),

    record_declaration: $ => seq(
      '{',
      sep1(';', $.field_declaration),
      optional(';'),
      '}'
    ),

    field_declaration: $ => seq(
      optional(choice(
        'mutable',
        $.modality_legacy
      )),
      $._field_name,
      $._maybe_polymorphic_typed,
      optional($.atat_modality_expr)
    ),

    _typed_with_optional_modes: $ => seq(
      $._typed,
      optional($.atat_mode_expr)
    ),

    // Does not allow modes
    _simple_typed: $ => seq(':', $._simple_type),

    // Does not allow modes
    _polymorphic_typed_with_optional_modes: $ => seq(
      $._polymorphic_typed,
      optional($.atat_mode_expr)
    ),

    // Does not allow modes
    _maybe_polymorphic_typed: $ => choice(
      $._typed,
      $._polymorphic_typed
    ),

    _maybe_polymorphic_typed_with_optional_modes: $ => choice(
      $._typed_with_optional_modes,
      $._polymorphic_typed_with_optional_modes
    ),

    polymorphic_type: $ => seq(
      choice(
        // Type variables with optional layout annotations. Example:
        //    'a ('b : value)
        repeat1($._type_variable_with_optional_jkind_annotation),
        // Types introduced with the [type] keyword, with optional layout
        // annotations. Example:
        //    type a (b : value)
        alias(
          $._abstract_types_with_optional_jkind_annotations,
          $.abstract_types
        )
      ),
      '.',
      $._type
    ),

    _coerced: $ => seq(':>', $._type),

    // One or more abstract types. Does not allow layout annotations. Example:
    //    type t s
    _abstract_types_with_optional_jkind_annotations: $ => seq(
      'type',
      repeat1(choice(
        $._type_constructor,
        parenthesize(seq(
          $._type_constructor,
          $._jkind_annotation
        ))
      ))
    ),

    // A single abstract type with a layout annotation. Since there is only one
    // type, we don't need parentheses, i.e. we allow [type t : any] instead of
    // [type (t : any)].
    type_variable_with_jkind_annotation: $ => parenthesize(seq(
      $.type_variable,
      $._jkind_annotation
    )),

    type_wildcard_with_jkind_annotation: $ => parenthesize(seq(
      $._type_wildcard,
      $._jkind_annotation
    )),

    _type_variable_with_optional_jkind_annotation: $ => choice(
      $.type_variable,
      $.type_variable_with_jkind_annotation
    ),
    _type_wildcard_with_optional_jkind_annotation: $ => choice(
      $._type_wildcard,
      $.type_wildcard_with_jkind_annotation
    ),

    _jkind_annotation: $ => seq(':', $.jkind),

    // TODO: Add these choices when they are fully implemented in
    // the language.
    //
    // seq(
    //   $.jkind,
    //   'mod',
    //   $.mode_expr
    // ),
    // seq(
    //   $.jkind,
    //   'with',
    //   $._type
    // ),
    // seq(
    //   'kind_of',
    //   $._type
    // )
    jkind: $ => $._identifier,

    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.unboxed_type_constructor_path,
      $.constructed_type,
      $.local_open_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.type_variable_with_jkind_annotation,
      $.type_wildcard_with_jkind_annotation,
      $._extension
    ),

    _type: $ => choice(
      $._tuple_type,
      $.function_type,
      $.aliased_type
    ),

    function_type: $ => seq(
      $._parameter_type,
      optional($.at_mode_expr),
      '->',
      choice(
        $.function_type,
        seq(
          optional($._mode_expr_legacy),
          $._tuple_type,
          optional($.at_mode_expr)
        )
      )
    ),

    _parameter_type: $ => choice(
      $.typed_label,
      $.polymorphic_typed_label,
      seq(
        optional($._mode_expr_legacy),
        $._tuple_type_without_leading_label
      ),
      // We can't have a tuple_type_with_leading_label here because any leading
      // label should be parsed as the label for the parameter, not for the
      // tuple. Example:
      //    l:t * l:t -> t
      // should be parsed as
      //    l:(t * l:t) -> t
      parenthesize($.polymorphic_type)
    ),

    typed_label: $ => seq(
      optional('?'),
      $._label_name,
      ':',
      optional($._mode_expr_legacy),
      $._tuple_type_without_leading_label
    ),

    _tuple_type: $ => prec(PREC.seq, choice(
      $._tuple_type_without_leading_label,
      $.tuple_type_with_leading_label
    )),

    // A tuple type of one or more elements such that the first element is
    // unlabeled
    _tuple_type_without_leading_label: $ => choice(
      $._simple_type,
      $.proper_tuple_type
    ),

    // A tuple type of at least two elements such that the first element is
    // labeled
    proper_tuple_type: $ => seq(
      $._simple_type,
      '*',
      sep1('*', $._tuple_type_element)
    ),

    _tuple_type_element: $ => prec(PREC.prod, seq(
      optional(seq(
        $._label_name,
        ':'
      )),
      $._simple_type
    )),

    constructed_type: $ => prec(PREC.app, seq(
      $._constructed_type_arguments,
      choice(
        $.type_constructor_path,
        $.unboxed_type_constructor_path
      )
    )),

    _constructed_type_arguments: $ => choice(
      $._simple_type,
      parenthesize(sep2(',', choice(
        // Any type. This includes parenthesized type variables/wildcards with
        // layout annotations. Examples:
        //    t
        //    'a
        //    _
        //    ('a : value)
        //    (_ : value)
        $._type,
        // A type variable with a layout annotation. Example:
        //    'a : value
        seq(
          $.type_variable,
          $._jkind_annotation
        ),
        // A type wildcard with a layout annotation. Example:
        //    _ : value
        seq(
          $._type_wildcard,
          $._jkind_annotation
        )
      )))
    ),

    aliased_type: $ => prec(PREC.match, seq(
      $._type,
      'as',
      choice(
        $._type_variable_with_optional_jkind_annotation,
        $._type_wildcard_with_optional_jkind_annotation
      ),
    )),

    hash_type: $ => prec(PREC.hash, seq(
      optional($._constructed_type_arguments),
      '#',
      $.class_type_path
    )),

    parenthesized_type: $ => parenthesize($._type),

    // Expressions

    _expression: $ => choice(
      $._simple_expression,
      $.product_expression,
      $.cons_expression,
      $.application_expression,
      $.infix_expression,
      $.sign_expression,
      $.set_expression,
      $.if_expression,
      $.while_expression,
      $.for_expression,
      $.match_expression,
      $.function_expression,
      $.fun_expression,
      $.try_expression,
      $.let_expression,
      $.assert_expression,
      $.lazy_expression,
      $.let_module_expression,
      $.let_open_expression,
      $.let_exception_expression,
      $.mode_legacy_expression,
      $.exclave_legacy_expression
    ),

    _sequence_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    list_expression: $ => seq(
      '[',
      optional(choice(
        seq(
          sep1(';', $._expression),
          optional(';')
        ),
        $.comprehension
      )),
      ']'
    ),

    comprehension: $ => seq(
      $._expression,
      repeat1($.comprehension_clause)
    ),

    comprehension_clause: $ => choice(
      seq(
        'for',
        sep1('and', $.comprehension_iterator)
      ),
      seq(
        'when',
        $._expression
      )
    ),

    comprehension_iterator: $ => choice(
      seq(
        $._pattern,
        '=',
        $._expression,
        choice('to', 'downto'),
        $._expression
      ),
      seq(
        // We allow legacy modes in [x for local_ x in y], but not in
        // [x for x = 1 to 10]
        optional($.mode_legacy),
        $._pattern,
        'in',
        $._expression
      )
    ),

    sequence_expression: $ => prec.right(PREC.seq, seq(
      field('left', $._expression),
      ';',
      optional(seq(
        optional($._attribute),
        field('right', $._sequence_expression)
      ))
    )),

    fun_expression: $ => prec.right(PREC.match, seq(
      'fun',
      optional($._attribute),
      repeat1($._parameter),
      optional($._simple_typed),
      '->',
      field('body', $._sequence_expression)
    )),

    let_expression: $ => prec.right(PREC.match, seq(
      $.value_definition,
      'in',
      $._sequence_expression
    )),

    mode_legacy_expression: $ => seq(
      $.mode_legacy,
      $._sequence_expression
    ),

    exclave_legacy_expression: $ => seq(
      $.exclave_legacy,
      $._sequence_expression
    ),

    parenthesized_expression: $ => choice(
      seq(
        'begin',
        optional($._attribute),
        $._sequence_expression,
        'end'
      ),
      parenthesize($._sequence_expression)
    ),

    _pattern_no_exception: $ => choice(
      $._simple_pattern,
      $.alias_pattern,
      $.or_pattern,
      $.constructor_pattern,
      $.tag_pattern,
      $.tuple_pattern,
      $.cons_pattern,
      $.range_pattern,
      $.lazy_pattern
    ),

    _pattern: $ => choice(
      $._pattern_no_exception,
      $.exception_pattern
    ),

    typed_pattern: $ => parenthesize(seq(
      optional($._mode_expr_legacy),
      $._pattern,
      $._typed_with_optional_modes
    )),

    // Allows modes
    polymorphic_typed_pattern: $ => parenthesize(seq(
      optional($._mode_expr_legacy),
      $._pattern,
      $._polymorphic_typed_with_optional_modes
    )),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _mode_expr: $ => repeat1($._mode),
